--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,8 +20,8 @@ jobs:
           node-version: '20'  # Updated to Node 20
           cache: 'npm'
 
-      - name: Install dependencies
-        run: npm ci
+      # - name: Install dependencies
+      #   run: npm ci
 
       - name: Build for Staging
         if: github.ref == 'refs/heads/develop'
@@ -35,7 +35,8 @@ jobs:
         run: npm run build
         env:
           NODE_ENV: production
-          VITE_API_URL: https://api.yourdomain.com
+          # VITE_API_URL: https://api.yourdomain.com
+
 
       - name: Verify build output
         run: |
