--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,12 +27,12 @@ jobs:
         id: set-config
         run: |
           if [ "${{ github.ref }}" == "refs/heads/main" ]; then
-            echo "SSH_HOST=${{ secrets.PRODUCTION_SSH_HOST }}" >> $GITHUB_OUTPUT
-            echo "SSH_USER=${{ secrets.PRODUCTION_SSH_USER }}" >> $GITHUB_OUTPUT
-            echo "DEPLOY_PATH=${{ secrets.PRODUCTION_PATH }}" >> $GITHUB_OUTPUT
+            echo "SSH_HOST=${{ secrets.TEST_SSH_HOST }}" >> $GITHUB_OUTPUT
+            echo "SSH_USER=${{ secrets.TEST_SSH_USER }}" >> $GITHUB_OUTPUT
+            echo "DEPLOY_PATH=${{ secrets.TEST_PATH }}" >> $GITHUB_OUTPUT
             echo "ENVIRONMENT=production" >> $GITHUB_OUTPUT
             echo "ENV_FILE<<EOF" >> $GITHUB_OUTPUT
-            echo "${{ secrets.PRODUCTION_ENV_FILE }}" >> $GITHUB_OUTPUT
+            echo "${{ secrets.TEST_ENV_FILE }}" >> $GITHUB_OUTPUT
             echo "EOF" >> $GITHUB_OUTPUT
           else
             echo "SSH_HOST=${{ secrets.STAGING_SSH_HOST }}" >> $GITHUB_OUTPUT
@@ -67,7 +67,7 @@ jobs:
         id: set-path
         run: |
           if [ "${{ github.ref }}" == "refs/heads/main" ]; then
-            echo "DEPLOY_PATH=${{ secrets.PRODUCTION_PATH }}" >> $GITHUB_OUTPUT
+            echo "DEPLOY_PATH=${{ secrets.TEST_PATH }}" >> $GITHUB_OUTPUT
             echo "ENVIRONMENT=production" >> $GITHUB_OUTPUT
           else
             echo "DEPLOY_PATH=${{ secrets.STAGING_PATH }}" >> $GITHUB_OUTPUT
@@ -78,7 +78,7 @@ jobs:
         run: |
           mkdir -p ~/.ssh
           if [ "${{ steps.set-config.outputs.ENVIRONMENT }}" == "production" ]; then
-            echo "${{ secrets.PRODUCTION_SSH_PRIVATE_KEY }}" > ~/.ssh/deploy_key
+            echo "${{ secrets.TEST_SSH_PRIVATE_KEY }}" > ~/.ssh/deploy_key
           else
             echo "${{ secrets.STAGING_SSH_PRIVATE_KEY }}" > ~/.ssh/deploy_key
           fi
